# market_cheker

./: .gitignore  alembic.ini  cheker.py  config.py  data.json  db.py  handlers.py  main.py  models.py  pyproject.toml  requirements.txt  selenium-test.py  test.py  token_maker.py  utils.py
db/: _main.py
migration/: env.py
migration/versions/: 5f40f7c312a6_add_lots_table.py  61eb8e8ff78c_refactor.py  907155435c3a_baseline.py
