[project]
name = "market-cheker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.21.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "types-requests>=2.32.4.20250611",
]
