[project]
name = "market-cheker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.21.0",
    "alembic>=1.16.4",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "sqlacodegen>=3.0.0",
    "types-requests>=2.32.4.20250611",
]
